# galactic-dao-contracts

./: .gitignore  Cargo.toml  README.md  build.sh  typegen.sh
artifacts/: checksums.txt  checksums_intermediate.txt  galacticdao_nft_staking.wasm  galacticdao_proposal_nft_voting.wasm  galacticdao_proposal_nft_voting_factory.wasm
contracts/proposal-nft-voting/: Cargo.toml
contracts/proposal-nft-voting-factory/: Cargo.toml
contracts/proposal-nft-voting-factory/src/: contract.rs  error.rs  lib.rs  response.proto  state.rs
contracts/proposal-nft-voting/examples/: schema.rs
contracts/proposal-nft-voting/scripts/: schema.rs
contracts/proposal-nft-voting/src/: contract.rs  lib.rs
contracts/proposal/proposal-nft-voting/: Cargo.toml
contracts/proposal/proposal-nft-voting-factory/: Cargo.toml
contracts/proposal/proposal-nft-voting-factory/examples/: schema.rs
contracts/proposal/proposal-nft-voting-factory/schema/: proposal_factory_execute_msg.json  proposal_factory_instantiate_msg.json  proposal_factory_query_msg.json
contracts/proposal/proposal-nft-voting-factory/src/: contract.rs  state.rs
contracts/proposal/proposal-nft-voting-factory/ts/: ProposalFactoryContract.ts
contracts/proposal/proposal-nft-voting/schema/: proposal_execute_msg.json  proposal_instantiate_msg.json  proposal_query_msg.json  proposal_status_response.json  votes_query_response.json
contracts/proposal/proposal-nft-voting/src/: contract.rs  error.rs  lib.rs  state.rs  tests.rs
contracts/proposal/proposal-nft-voting/ts/: ProposalContract.ts
contracts/staking/nft-staking/: Cargo.toml
contracts/staking/nft-staking/src/: contract.rs  error.rs  execute.rs  lib.rs  query.rs  state.rs  tests.rs  util.rs
node-scripts/: .eslintignore  .gitignore  README.md  package-lock.json  package.json  tsconfig.json
node-scripts/src/bindings/: CW721Contract.ts  ProposalContract.ts  ProposalFactoryContract.ts
node-scripts/src/common/: logger.ts  testingShims.ts  uploadContractToChain.ts
node-scripts/src/common/scripts/: uploadContractToChain.ts
node-scripts/src/nft/: constants.ts  messages.ts  types.ts
node-scripts/src/nft/bindings/: constants.ts  messages.ts  models.ts  types.ts
node-scripts/src/proposal/: constants.ts  proposal.ts  proposalFactory.ts  proposalFactoryMessages.ts  proposalFactoryTypes.ts  proposalFactoryUtils.ts  proposalMessages.ts  proposalTypes.ts  utils.ts
node-scripts/src/staking/: constants.ts  messages.ts  types.ts
node-scripts/src/utils/: environment.ts  executeContract.ts  instantiateContract.ts  lcdClient.ts  misc.ts  queryContract.ts  uploadContract.ts  wallet.ts
(+38 files in other folders)
