[workspace]
members = [
  "contracts/proposal-nft-voting",
  "contracts/proposal-nft-voting-factory",
  "packages/nft-voting-protocol"
]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
