[workspace]
members = [
  "contracts/proposal/proposal-nft-voting",
  "contracts/proposal/proposal-nft-voting-factory",
  "contracts/staking/nft-staking",
  "packages/nft-voting-protocol",
  "packages/nft-staking-protocol"
]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
