[package]
name = "galacticdao-proposal-nft-voting"
version = "0.1.0"
authors = ["Frank Jia <jiafrank98@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/queryNft exports
library = []

[dependencies]
cosmwasm-std = { version = "1.0.0" }
cosmwasm-storage = { version = "1.0.0" }
cw-storage-plus = { version = "0.14.0" }
schemars = "0.8.3"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.26" }
galacticdao-nft-voting-protocol = { version = "0.1.0", path = "../../../packages/nft-voting-protocol" }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0" }
